# modorganizer-lootcli

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  game_settings.cpp  game_settings.h  lootthread.cpp  lootthread.h  pch.h  version.h  version.rc
src/linux/: main.cpp
src/win32/: main.cpp
